client: Set default timeout to infinite for all GDaemonFile methods

Certain operations may take a lot of time to complete, don't timeout
on that. Use cancellable if you need to control the flow.

https://bugzilla.gnome.org/show_bug.cgi?id=687534